--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Educational resources on grapes, including their history, cultivation, and nutritional benefits.">
     <title>Educational Resources on Grapes</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
