--- a/page2.html
+++ b/page2.html
@@ -5,27 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Educational resources on grapes, including their history, cultivation, and nutritional benefits.">
     <title>Educational Resources on Grapes</title>
-    <link rel="stylesheet" href="main.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QmrW12UzPOzImzf+ftZQnIoG7xHKNdFtw0EEjvCFNslxjI6A2peCxVww6azxQWVE" crossorigin="anonymous">
+    <style>
+        /* Custom hover effect for main content */
+        .main-card {
+            transition: background-color 0.3s ease;
+        }
+        .main-card:hover {
+            background-color: #f0f8ff; /* Light blue tint */
+        }
+    </style>
 </head>
 <body>
-    <header>
+    <header class="bg-primary text-white text-center py-4">
         <h1>Educational Resources on Grapes</h1>
     </header>
-    <main>
-        <section>
-            <p>
-                Grapes are one of the most ancient and widely cultivated fruits in the world. They come in a variety of colors, including green, red, and purple, and are used in countless culinary applications.
-            </p>
-            <p>
-                This resource is designed to provide an overview of the history of grape cultivation, their nutritional benefits, and how they contribute to global agriculture. Whether you're a student, teacher, or simply a curious learner, there's something here for everyone!
-            </p>
-            <p>
-                Explore the fascinating world of grapes and discover why they are an essential part of human culture and diet.
-            </p>
-        </section>
+    <main class="container mt-4">
+        <div class="card shadow-sm main-card">
+            <div class="card-body">
+                <p class="card-text">
+                    Grapes are one of the most ancient and widely cultivated fruits in the world. They come in a variety of colors, including green, red, and purple, and are used in countless culinary applications.
+                </p>
+                <p class="card-text">
+                    This resource is designed to provide an overview of the history of grape cultivation, their nutritional benefits, and how they contribute to global agriculture. Whether you're a student, teacher, or simply a curious learner, there's something here for everyone!
+                </p>
+                <p class="card-text">
+                    Explore the fascinating world of grapes and discover why they are an essential part of human culture and diet.
+                </p>
+            </div>
+        </div>
     </main>
-    <footer>
-        <p>© 2024 Educational Resources. All rights reserved.</p>
+    <footer class="bg-primary text-white text-center py-3 mt-4">
+        <p class="mb-0">© 2024 Educational Resources. All rights reserved.</p>
     </footer>
+    <!-- Bootstrap JS (optional, for interactivity) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-d9n8sGVeoDQTWfMtYfpC6at2tJSRSKoXJ+Rp1BtKwVxAlpXpsRt/8kSh5anb9a1g" crossorigin="anonymous"></script>
 </body>
 </html>
