--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Educational resources on grapes, including their history, cultivation, and nutritional benefits.">
     <title>Educational Resources on Grapes</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QmrW12UzPOzImzf+ftZQnIoG7xHKNdFtw0EEjvCFNslxjI6A2peCxVww6azxQWVE" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQ5Z9JBjso9FvV34CKFTmS7hcjX3IHkWlgQ+HIm+ENwE5Dk7r0KIUkwp1" crossorigin="anonymous">
     <style>
         /* Custom hover effect for main content */
         .main-card {
@@ -39,7 +39,7 @@
     <footer class="bg-primary text-white text-center py-3 mt-4">
         <p class="mb-0">© 2024 Educational Resources. All rights reserved.</p>
     </footer>
-    <!-- Bootstrap JS (optional, for interactivity) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-d9n8sGVeoDQTWfMtYfpC6at2tJSRSKoXJ+Rp1BtKwVxAlpXpsRt/8kSh5anb9a1g" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2zGPrTEXFfIHODo4KIsoqAq8GPCpzcxA5OGzLC/jtQQo1LVNFlZfWvCgtA+" crossorigin="anonymous"></script>
 </body>
 </html>
