--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Educational resources on grapes, including their history, cultivation, and nutritional benefits.">
     <title>Educational Resources on Grapes</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQ5Z9JBjso9FvV34CKFTmS7hcjX3IHkWlgQ+HIm+ENwE5Dk7r0KIUkwp1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <style>
         /* Custom hover effect for main content */
         .main-card {
@@ -40,6 +40,6 @@
         <p class="mb-0">© 2024 Educational Resources. All rights reserved.</p>
     </footer>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2zGPrTEXFfIHODo4KIsoqAq8GPCpzcxA5OGzLC/jtQQo1LVNFlZfWvCgtA+" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
